--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -161,7 +161,6 @@ table {
 .title-color {
   color: $reusable-title-color !important;
   margin-top: 30px;
-  padding-bottom: 5px;
   font-weight: $secondary-font-weight!important;
 }
 
@@ -178,7 +177,7 @@ table {
 }
 
 .extra-padding-top {
-  padding-top: 6px;
+  padding-top: 3px;
 }
 
 .no-padding-bottom {
